--- a/package.json
+++ b/package.json
@@ -1,6 +1,26 @@
 {
-  "name": "terriblei2_portfolio",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT"
+    "name": "terriblei2_portfolio",
+    "version": "1.0.0",
+    "main": "index.js",
+    "license": "MIT",
+    "devDependencies": {
+        "@types/react": "^16.9.22",
+        "@types/react-dom": "^16.9.5",
+        "html-webpack-plugin": "^3.2.0",
+        "ts-loader": "^6.2.1",
+        "typescript": "^3.8.2",
+        "webpack": "^4.41.6",
+        "webpack-cli": "^3.3.11",
+        "webpack-dev-server": "^3.10.3"
+    },
+    "dependencies": {
+        "@types/styled-components": "^5.0.0",
+        "react": "^16.12.0",
+        "react-dom": "^16.12.0",
+        "styled-components": "^5.0.1"
+    },
+    "scripts": {
+        "dev": "webpack-dev-server --hot --inline",
+        "build": "webpack"
+    }
 }
